--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "mysql2": "^3.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
