--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "ki-ernaehrungsplaner",
   "private": true,
@@ -5,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "start": "node server.js",
+    "start": "node server/index.js",
     "preview": "vite preview"
   },
   "dependencies": {
