feat: Add scripts for database migrations
Adds two new scripts to package.json: `migrate:images` and `migrate:complexity`.
The `migrate:complexity` script is implemented to migrate the `dishComplexity` field in the database, ensuring data integrity for archived plans.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "start": "node server/index.js",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "migrate:images": "node scripts/migrate_images.js",
+    "migrate:complexity": "node scripts/migrate_complexity.js"
   },
   "dependencies": {
     "@google/genai": "latest",
