--- a/package.json
+++ b/package.json
@@ -1,1 +1,38 @@
-full contents of package.json
+{
+  "name": "ki-ernaehrungsplaner",
+  "private": true,
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "start": "node server/index.js",
+    "preview": "vite preview",
+    "migrate:images": "node scripts/migrate_images.js",
+    "migrate:complexity": "node scripts/migrate_complexity.js",
+    "migrate:persons": "node scripts/migrate_persons.js",
+    "migrate:recipe-images": "node scripts/migrate_to_recipe_images.js"
+  },
+  "dependencies": {
+    "@google/genai": "latest",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "mysql2": "^3.10.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/express": "^4.17.21",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.6",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.4"
+  }
+}
