feat: Normalize data structures and update components
Refactors the application's data models and components to use a more normalized structure. This includes updating the `types.ts` file to define `Meal` and `MealCategory` types, and consequently adjusting `data.ts`, `App.tsx`, and `components/WeeklyPlan.tsx` to align with these new definitions.

The changes improve data consistency and prepare the application for more detailed meal planning features. A new migration script is also added to the package.json for future data normalization tasks.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "migrate:images": "node scripts/migrate_images.js",
     "migrate:complexity": "node scripts/migrate_complexity.js",
-    "migrate:recipe-images": "node scripts/migrate_to_recipe_images.js"
+    "migrate:recipe-images": "node scripts/migrate_to_recipe_images.js",
+    "migrate:normalize-db": "node scripts/migrate_to_normalized_db.js"
   },
   "dependencies": {
     "@google/genai": "latest",
