feat: Add job processing and new migration scripts
Introduces a new `app_jobs` table to manage various asynchronous tasks, such as generating shareable content. Implements new migration scripts to handle data normalization and legacy data fixes for a more robust database structure. Updates `package.json` with new migration commands and `README.md` to reflect these changes and guide users on data migration. Modifies `htmlGenerator.js` to include meal category labels. Refactors `jobService.js` to focus on saving images for individual recipes and enhances Gemini service integration for recipe image generation.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "migrate:images": "node scripts/migrate_images.js",
     "migrate:complexity": "node scripts/migrate_complexity.js",
     "migrate:recipe-images": "node scripts/migrate_to_recipe_images.js",
-    "migrate:normalize-db": "node scripts/migrate_to_normalized_db.js"
+    "migrate:normalize-db": "node scripts/migrate_to_normalized_db.js",
+    "migrate:fix-legacy": "node scripts/migrate_from_legacy.js"
   },
   "dependencies": {
     "@google/genai": "latest",
