feat: Refactor plan generation and archive fetching
This commit refactors the plan generation and archive fetching logic.

- **Plan Generation:**
    - Removed the direct passing of `onComplete` callback to `generateNewPlan`. The `useMealPlanGenerator` hook now clears the previous plan before starting a new generation. The handling of the generated plan and its side effects (like setting active plan, settings, and view) is now centralized in the `App.tsx` component's `useEffect`.
    - The `previousPlanRecipes` argument is now consistently passed as an empty array during generation, simplifying the logic.

- **Archive Fetching:**
    - The `fetchArchive` hook in `useArchive` now directly fetches the necessary data from the backend without performing extensive data reconstruction on the client.
    - The `onShareComplete` callback in `App.tsx` is simplified; it now just triggers a refetch of the archive to reflect any database updates.
    - Backend `archive.js` route was updated to fetch plan details along with associated recipes more efficiently.
    - `package.json` updates include renaming the package, adding a description and keywords, updating dependencies, and adding new migration scripts.
    - `types.ts` was updated to include new fields for recipes: `dietType`, `dishComplexity`, `isGlutenFree`, and `isLactoseFree`.

--- a/package.json
+++ b/package.json
@@ -1,39 +1,46 @@
 {
-  "name": "ki-ernaehrungsplaner",
-  "private": true,
+  "name": "ernaehrungsplan-app",
   "version": "1.0.0",
+  "description": "Eine App zur Erstellung und Verwaltung von Ernährungsplänen.",
+  "main": "server/index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
     "start": "node server/index.js",
+    "dev": "vite",
+    "build": "vite build",
     "preview": "vite preview",
     "migrate:images": "node scripts/migrate_images.js",
     "migrate:complexity": "node scripts/migrate_complexity.js",
-    "migrate:recipe-images": "node scripts/migrate_to_recipe_images.js",
-    "migrate:normalize-db": "node scripts/migrate_to_normalized_db.js",
+    "migrate:persons": "node scripts/migrate_persons.js",
+    "migrate:to-images-table": "node scripts/migrate_to_recipe_images.js",
+    "migrate:to-normalized-db": "node scripts/migrate_to_normalized_db.js",
+    "migrate:images-fk": "node scripts/migrate_recipe_images_foreign_key.js",
     "migrate:fix-legacy": "node scripts/migrate_from_legacy.js"
   },
+  "keywords": [
+    "ernaehrungsplan",
+    "meal-plan",
+    "gemini",
+    "react",
+    "nodejs"
+  ],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@google/genai": "latest",
+    "@google/genai": "^0.16.0",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
-    "mysql2": "^3.10.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "mysql2": "^3.11.0"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.7",
-    "@types/express": "^4.17.21",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.6",
-    "typescript": "^5.5.3",
-    "vite": "^5.3.4"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "vite": "^5.3.5"
   }
 }
