feat: Migrate to recipe title for image linking
This commit refactors how recipe images are linked and managed. The previous approach used a foreign key to a specific `recipe_images` entry. This change updates the system to link images via the recipe's title, allowing for more flexible image management and simplifying the database schema.

Key changes include:
- Modifying the `recipe_images` table to use `recipe_title` as a unique identifier instead of `id`.
- Updating all relevant routes (`archive.js`, `generation.js`, `recipes.js`, `jobService.js`) to query and insert images using the recipe title.
- Renaming the migration script from `migrate_recipe_images_foreign_key.js` to `migrate_link_images.js` to reflect its new purpose.
- Removing the `recipe_image_id` foreign key from the `recipes` table.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "migrate:persons": "node scripts/migrate_persons.js",
     "migrate:to-images-table": "node scripts/migrate_to_recipe_images.js",
     "migrate:to-normalized-db": "node scripts/migrate_to_normalized_db.js",
-    "migrate:images-fk": "node scripts/migrate_recipe_images_foreign_key.js",
+    "migrate:link-images": "node scripts/migrate_link_images.js",
     "migrate:fix-legacy": "node scripts/migrate_from_legacy.js"
   },
   "keywords": [
