feat: Add script to regenerate shopping lists
Introduces a new script `regenerate_shopping_list.js` and a corresponding npm script `fix:shopping-list`.
This script allows for the regeneration of shopping lists for plans where they are missing or empty, leveraging the Gemini AI service.
It also includes necessary modifications to `geminiService.js` to support generating only the shopping list in JSON format.

--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "ernaehrungsplan-app",
   "version": "1.0.0",
@@ -14,7 +15,8 @@
     "migrate:to-images-table": "node scripts/migrate_to_recipe_images.js",
     "migrate:to-normalized-db": "node scripts/migrate_to_normalized_db.js",
     "migrate:link-images": "node scripts/migrate_link_images.js",
-    "migrate:fix-legacy": "node scripts/migrate_from_legacy.js"
+    "migrate:fix-legacy": "node scripts/migrate_from_legacy.js",
+    "fix:shopping-list": "node scripts/regenerate_shopping_list.js"
   },
   "keywords": [
     "ernaehrungsplan",
