feat: Add public plan sharing and API key fallback
Introduces a new public endpoint to retrieve plan data via a share ID. This enhances external access to meal plan information.

Also, implements a fallback mechanism for API keys used by the Gemini service. If the primary API key fails or is not set, the application will now attempt to use a secondary API_KEY_FALLBACK, improving resilience and reducing single points of failure.

Additionally, environment variable checks have been refined to make API_KEY optional, ensuring the application can start even without it if a fallback is available. A new script `regenerate:shares` has also been added to the package.json for managing share IDs.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "migrate:to-normalized-db": "node scripts/migrate_to_normalized_db.js",
     "migrate:link-images": "node scripts/migrate_link_images.js",
     "migrate:fix-legacy": "node scripts/migrate_from_legacy.js",
-    "fix:shopping-list": "node scripts/regenerate_shopping_list.js"
+    "fix:shopping-list": "node scripts/regenerate_shopping_list.js",
+    "regenerate:shares": "node scripts/regenerate_shares.js"
   },
   "keywords": [
     "ernaehrungsplan",
