--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 
+
 {
   "name": "ernaehrungsplan-app",
   "version": "1.0.0",
@@ -17,6 +18,7 @@
     "migrate:link-images": "node scripts/migrate_link_images.js",
     "migrate:fix-legacy": "node scripts/migrate_from_legacy.js",
     "fix:shopping-list": "node scripts/regenerate_shopping_list.js",
+    "fix:calories": "node scripts/fix_recipe_calories.js",
     "regenerate:shares": "node scripts/regenerate_shares.js"
   },
   "keywords": [
