fix: Add script to fix null recipe metadata
Introduces a new script to update recipes that have null values for `dietType`, `dishComplexity`, and `isGlutenFree`. These fields will be populated with default values to ensure data consistency.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fix:shopping-list": "node scripts/regenerate_shopping_list.js",
     "fix:calories": "node scripts/fix_recipe_calories.js",
     "fix:diet-preference": "node scripts/fix_null_diet_preference.js",
+    "fix:recipe-metadata": "node scripts/fix_null_recipe_metadata.js",
     "regenerate:shares": "node scripts/regenerate_shares.js"
   },
   "keywords": [
