feat: Add thumbnail generation and storage for recipe images
Introduces the ability to generate and store thumbnail versions of recipe images. This improves performance by allowing the UI to load smaller image assets for previews.

The changes include:
- Adding `thumbnail_url` to the `Recipe` type and database schema.
- Updating the image saving API endpoint to return both full-size and thumbnail URLs.
- Modifying the UI components to handle and display thumbnail URLs.
- Adding a new npm script `convert:images` for migrating existing images to include thumbnails.
- Introducing the `sharp` library for image processing.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "migrate:images": "node scripts/migrate_images.js",
+    "convert:images": "node scripts/convert_existing_images.js",
     "migrate:complexity": "node scripts/migrate_complexity.js",
     "migrate:persons": "node scripts/migrate_persons.js",
     "migrate:to-images-table": "node scripts/migrate_to_recipe_images.js",
@@ -40,7 +41,8 @@
     "express": "^4.19.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
-    "mysql2": "^3.11.0"
+    "mysql2": "^3.11.0",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
