feat: Update genai dependency to latest
Updates the `@google/genai` dependency to the `latest` version. This ensures that the application is using the most recent features and bug fixes from the generative AI library.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google/genai": "^0.16.0",
+    "@google/genai": "latest",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
