--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "@vitejs/plugin-react": "^4.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "vite": "^5.3.5",
-    "vite-plugin-pwa": "^0.20.0"
+    "vite": "^5.3.5"
   }
 }
