--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.19.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "lucide-react": "^0.475.0",
     "mysql2": "^3.11.0",
     "sharp": "^0.33.4"
   },
